AoC 2024 Day 24 Part 2 - java